fixed horizontal scrolling

--- a/assets/css/bg-img-layout.css
+++ b/assets/css/bg-img-layout.css
@@ -1,5 +1,5 @@
 .fs-bg-container {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
 }
 
@@ -24,7 +24,7 @@
 }
 
 .fs-bg-img {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   background-position: center;
   background-repeat: no-repeat;
