--- a/assets/css/bulleted-list-layout.css
+++ b/assets/css/bulleted-list-layout.css
@@ -1,6 +1,6 @@
 .bulleted-list-w-img-container {
   padding: 0 50px;
-  width: 100vw;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
