--- a/assets/css/img-text-row.css
+++ b/assets/css/img-text-row.css
@@ -1,6 +1,6 @@
 .img-text-row-container {
   padding: 0px;
-  width: 100vw;
+  width: 100%;
   display: flex;
   justify-content: space-evenly;
   flex-wrap: wrap;
