--- a/assets/css/nav.css
+++ b/assets/css/nav.css
@@ -1,7 +1,7 @@
 nav {
   padding-right: 20px;
   height: 10vh;
-  width: 100vw;
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -122,7 +122,7 @@ nav .link .active:after {
     top: 0;
     background: #2f514b;
     height: 100vh;
-    max-width: 100vw;
+    max-width: 100%;
     width: 100%;
     flex-direction: column;
     clip-path: circle(100px at 90% -10%);
