--- a/assets/css/noscript.css
+++ b/assets/css/noscript.css
@@ -33,7 +33,7 @@
     position: static;
     background: #2f514b;
     height: 10vh;
-    max-width: 100vw;
+    max-width: 100%;
     width: 100%;
     clip-path: none;
     -webkit-clip-path: none;
